welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var a:Int
            ^nearHundred:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var b:Int
            ^nearHundred:5: error: type mismatch;
 found   : Unit
 required: Boolean
} 
^